# sonicbot-matrix

./: .gitignore  Cargo.toml  README.md  config.yaml.dist
src/: instruction_generators.rs  lib.rs  macros.rs  main.rs
src/essentials/: mod.rs
src/essentials/on_event/: invited.rs  joined.rs  left.rs  mod.rs
src/essentials/on_message/: help.rs  list.rs  mod.rs
src/plugins/: mod.rs
src/plugins/on_event/: mod.rs
src/plugins/on_message/: choose.rs  mod.rs  randfact.rs
