[package]
name = "sonicbot-matrix"
version = "0.1.2"
edition = "2021"
authors = ["Westly Ward <sonicrules1234@gmail.com>"]
description = "Matrix bot that you can write plugins for"
license-file = "LICENSE"
repository = "https://github.com/sonicrules1234/sonicbot-matrix"
readme = "README.md"
homepage = "https://github.com/sonicrules1234/sonicbot-matrix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc-handler = "0.1.1"
glob = "0.3.0"
rand = "0.8.4"
regex = "1.5.4"
ruma = { version = "0.4.0", features = ["events", "client-api-c", "api"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_yaml = "0.8.23"
sonicbot-matrix-macros = "0.1.0"
ureq = { version = "2.4.0", features = ["json"] }
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }

[features]
